samples/_failures_safe/1761220584_7230bb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b79187b0.c: In function ‘main’:
./samples/SAFE/__tmp_b79187b0.c:159:33: error: expected ‘]’ at end of input
  159 |     if (len > 0 && input[len - 1
      |                                 ^
      |                                 ]
./samples/SAFE/__tmp_b79187b0.c:159:5: error: expected declaration or statement at end of input
  159 |     if (len > 0 && input[len - 1
      |     ^~
